ingress/traefik/ingress-simple-3.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dep-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /dep1
        pathType: Prefix
        backend:
          service:
            name: dep1
            port:
              number: 80
  - http:
      paths:
      - path: /dep2
        pathType: Prefix
        backend:
          service:
            name: dep2
            port:
              number: 80
  defaultBackend:
    service:
      name: dep3
      port:
        number: 80


---
apiVersion: v1
kind: Service
metadata:
  name: dep1
  labels:
    run: dep1
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: dep1

---
apiVersion: v1
kind: Service
metadata:
  name: dep2
  labels:
    run: dep2
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: dep2

---
apiVersion: v1
kind: Service
metadata:
  name: dep3
  labels:
    run: dep3
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: dep3

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep1
spec:
  selector:
    matchLabels:
      run: dep1
  replicas: 1
  template:
    metadata:
      labels:
        run: dep1
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: html
      volumes:
        - name: html
          configMap:
            name: dep1-page

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep2
spec:
  selector:
    matchLabels:
      run: dep2
  replicas: 1
  template:
    metadata:
      labels:
        run: dep2
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: html
      volumes:
        - name: html
          configMap:
            name: dep2-page

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep3
spec:
  selector:
    matchLabels:
      run: dep3
  replicas: 1
  template:
    metadata:
      labels:
        run: dep3
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: html
      volumes:
        - name: html
          configMap:
            name: dep3-page
